# astanalyzer

./: .gitignore  README.MD  README.md  benchmark_result.json  pyproject.toml  split.sh
astanalyzer/: __init__.py  anchor.py  cli.py  engine.py  enums.py  file_selection.py  ignore_rules.py  kinds.py  logging_config.py  matcher.py  matcher_ast.py  matcher_conditions.py  matcher_types.py  node_selector.py  policy.py  predicates.py  report_ui.py  rule.py  rule_filtering.py  rule_loader.py  tools.py
astanalyzer/cli/: __init__.py  main.py
astanalyzer/core/: enums.py  kinds.py  rule.py
astanalyzer/engine/: __init__.py  patch_writer.py  path_utils.py  project_loader.py  reporting.py  scan_runtime.py  selected_patch_build.py
astanalyzer/filtering/: ignore_rules.py  policy.py
astanalyzer/fixer/: __init__.py  actions.py  builder.py  types.py
astanalyzer/matcher/: __init__.py  ast.py  conditions.py  core.py  types.py
astanalyzer/refactor/: __init__.py  builder.py  rename.py
astanalyzer/report_ui/: __init__.py  favicon.py  report_ui.py  script_loader.py  scripts.py  styles.py  templates.py
astanalyzer/rules/: __init__.py  complexity.py  dead_code.py  performance.py  security.py  semantic.py  style.py
astanalyzer/runtime/: logging_config.py
astanalyzer/selection/: node_selector.py
astanalyzer/utils/: __init__.py  naming.py
benchmark/: README.md  evaluate.py  runner.sh
docs/: architecture.md  cli.md  custom-rules.md  example.md  fixer-actions.md  fixes.md  getting-started.md  ignoring-findings.md  limitations.md  matcher-helpers.md  patch-system.md  path-resolution.md  report-ui.md  rule-catalog.md  rule-dsl.md  rules.md
docs/examples/: advanced-matcher.md  basic-rule.md
docs/reference/: predicates.md  tools.md
examples/basic/: README.md  bad.py
tests/: conftest.py  test_basic.py  test_extract_snippets.py  test_predicates.py  test_rule_loader.py  test_snippet.py
tests/anchor/: test_anchor.py
tools/: README.md  generate_reference_docs.py  restructure_modules.py  split_report_css.py
(+109 files in other folders)
