[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astanalyzer"
version = "0.1.0"
description = "AST-based static analysis engine with DSL for Python"
authors = [
    { name = "Martin Cech", email = "cech.martin@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astroid",
    "colorama",
    "pygments",
    "pillow"
]

[tool.setuptools.package-data]
"astanalyzer.report_ui" = ["styles/*.css", "scripts/*.js"]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage"
]

[project.scripts]
astanalyzer = "astanalyzer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.coverage.run]
source = ["astanalyzer"]
omit = [
    "tests/*",
    "tools/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = false